--- a/blog.html
+++ b/blog.html
@@ -58,7 +58,7 @@
       <div class="row" >
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog1.html"><img src="images/blog1.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog1.html"><img src="images/blog1.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Почему масло должно быть неразбавленным</h3>
             <p>Масло черного тмина полезно в своем первозданном, неразбавленном виде — именно на неразбавленное масло рассчитаны все рецепты по его употреблению. Дело в том, что, к сожалению, многие производители в целях экономии стали разбавлять свою продукцию другими растительными маслами, а это приводит к следующим последствиям:</p>
             <a href="blog/blog1.html">Читать дальше</a>
@@ -66,7 +66,7 @@
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog2.html"><img src="images/blog2.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog2.html"><img src="images/blog2.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Про сертификат происхождения семян</h3>
             <p>Существуют разные сорта тмина. Насыщенность семян черного тмина полезными микроэлементами во многом зависит от места его произрастания. Наиболее удачное сочетание климатических условий для выращивания семян тмина, обладающих медицинскими свойствами, это:</p>
             <a href="blog/blog2.html">Читать дальше</a>
@@ -75,7 +75,7 @@
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog3.html"><img src="images/blog3.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog3.html"><img src="images/blog3.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Первый холодный отжим</h3>
             <p>В случае с черным тмином очень важно, чтобы масло было получено именно путем первого холодного отжима — только так можно максимально сохранить его полезные свойства. Дело в том, что при горячем отжиме прессованию предшествует этап обработки семян в жаровнях — измельченные семена с добавлением воды обжаривают при температуре 100-110⁰С, после чего уже отжимают. </p>
             <a href="blog/blog3.html">Читать дальше</a>
@@ -88,7 +88,7 @@
       <div class="row" >
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog4.html"><img src="images/blog4.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog4.html"><img src="images/blog4.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при инфекционных заболеваниях</h3>
             <p>Очищенные от кожицы 1-2 дольки чеснока натереть нa мелкой терке, смешать с 1 чайной ложкой черного тмина и с </p>
             <a href="blog/blog4.html">Читать дальше</a>
@@ -96,7 +96,7 @@
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog5.html"><img src="images/blog5.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog5.html"><img src="images/blog5.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при заболеваниях опорно-двигательной системы</h3>
             <p>Ревматизм и мышечные боли -
               Немного нагреть небольшое количество черного тмина, смешанного с оливковым маслом, и интенсивно растереть больное место. Перед сном </p>
@@ -106,7 +106,7 @@
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog6.html"><img src="images/blog6.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog6.html"><img src="images/blog6.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при онкологических заболеваниях</h3>
             <p>Рак.
               Рекомендуется при раке употреблять черный тмин с чесноком. Для профилактики</p>
@@ -120,7 +120,7 @@
       <div class="row" >
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog7.html"><img src="images/blog7.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog7.html"><img src="images/blog7.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при кожных заболеваниях</h3>
             <p>
               Заболевании кожи лица.
@@ -130,7 +130,7 @@
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog8.html"><img src="images/blog8.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog8.html"><img src="images/blog8.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при заболеваниях желез внутренних секреций</h3>
             <p>Взять 2 кг меда, добавить 10-15 грамм пчелиного маточного молока, размешать. Добавить к смеси стакан молотого чёрного тмина и размещать хорошенько. Принимать по</p>
             <a href="blog/blog8.html">Читать дальше</a>
@@ -139,7 +139,7 @@
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog9.html"><img src="images/blog9.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog9.html"><img src="images/blog9.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при заболеваниях мочеполовой системы</h3>
             <p>Заболевания почек.
               1 чайную ложку листьев брусники поместить в фарфоровый чайник и заварить стаканом крутого кипятка, после охлаждения добавить в настой 1 чайную ложку масла</p>
@@ -153,7 +153,7 @@
       <div class="row" >
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog10.html"><img src="images/blog10.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog10.html"><img src="images/blog10.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при нарушении обмена веществ</h3>
             <p>Общая слабость.
               Смешать 10 капель масла черного тмина со стаканом апельсинового сока и принимать полученный напиток в течение 10 дней сразу после пробуждения. ВАЖНО:</p>
@@ -162,7 +162,7 @@
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog11.html"><img src="images/blog11.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog11.html"><img src="images/blog11.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при женских заболеваниях</h3>
             <p>Для облегчения родов.
               Одно из лучших средств для облегчения боли при родах. Разогреть черный тмин с медом и пить.
@@ -173,7 +173,7 @@
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog12.html"><img src="images/blog12.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog12.html"><img src="images/blog12.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при мужских заболеваниях</h3>
             <p>При простатите.
               Смешать 1 кг пчелиного мёда с 7 столовыми ложками молотого чёрного тмина, принимать утром и вечером, за 2 часа до еды по</p>
@@ -187,7 +187,7 @@
       <div class="row" >
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog13.html"><img src="images/blog13.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog13.html"><img src="images/blog13.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при заболеваниях желудочно-кишечной системы</h3>
             <p>Язвенная болезнь желудка и 12 перстной кишки.
 10 капель масла черного тмина с 1 чашкой меда, ежедневно по утрам натощак употребляйте 1 ч.ложку полученной смеси. Затем</p>
@@ -196,7 +196,7 @@
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog14.html"><img src="images/blog14.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog14.html"><img src="images/blog14.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при заболеваниях дыхательной системы</h3>
             <p>Кашель различного происхождения.
               Утром натощак принимать 0,5 чайной ложки масла черного тмина. После этого не пить 2 часа воду. Затем растереть грудь маслом черного тмина, разведенного с</p>
@@ -206,7 +206,7 @@
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog15.html"><img src="images/blog15.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog15.html"><img src="images/blog15.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при заболеваниях сердечно-сосудистой системы </h3>
             <p>Ревматизм и мышечные боли.
               — Немного нагреть небольшое количество черного тмина, смешанного с оливковым маслом,`и интенсивно растереть больное место. Также перед сном</p>
@@ -220,7 +220,7 @@
       <div class="row" >
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog16.html"><img src="images/blog16.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog16.html"><img src="images/blog16.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при заболеваниях нервной системы</h3>
             <p>Головные боли.
               1 ст. ложка молотого черного тмина, 1 ст. ложка молотых семян аниса (anise seed), 1 ст.ложка молотой гвоздики (cloves). Принимать по 1 чайной ложке за 15-30 мштут перед едой утром и вечером. Держать смесь во рту до тех пор</p>
@@ -229,7 +229,7 @@
         </div>
         <div class="col-sm-4 ">
           <div class="blog-item">
-            <a href="blog/blog17.html"><img src="images/blog17.jpg" width="350" height="262" alt="cumin.by"></a>
+            <a href="blog/blog17.html"><img src="images/blog17.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Применение черного тмина при ЛОР заболеваниях</h3>
             <p>Боль в ушах.
               На 3 дня замочить 1 дольку свежего чеснока в 2-х чайных ложках масла черного тмина. Процедить. Закапывать по</p>
