--- a/product/100g.html
+++ b/product/100g.html
@@ -54,7 +54,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="../images/22.jpg" class="img-responsive" alt="cumin.by">
+          <img src="../images/22.jpg" class="img-responsive" alt="Масло тмина">
         </div>
         <div class="col-sm-6">
           <h2><b>Семена черного тмина 100 гр.</b></h2>
