сертификаты на главную

--- a/index.html
+++ b/index.html
@@ -251,6 +251,26 @@
     </div>
   </section>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="titie-section wow fadeInDown animated ">
+        <h1>Вся продукция сертифицирована</h1>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <a href="images/cert1.jpg" target="_blank"><img src="images/cert1.jpg" width="300" height="400" alt="Масло тмина"></a>
+    </div>
+    <div class="col-sm-4">
+      <a href="images/cert2.jpg" target="_blank"><img src="images/cert2.jpg" width="300" height="400" alt="Масло тмина"></a>
+    </div>
+    <div class="col-sm-4">
+      <a href="images/cert3.jpg" target="_blank"><img src="images/cert2.jpg" width="300" height="400" alt="Масло тмина"></a>
+    </div>
+  </div>
+</div>
+
+
   <section class="news-section">
     <div class="container">
       <div class="row">
