политика обработки персональных данных

--- a/basket.html
+++ b/basket.html
@@ -183,10 +183,17 @@
         </div>
       </div>
 
+      <div class="col-sm-12">
+        <br><br>
+        <h3>Нажимая "Отправить заказ", вы соглашаетесь с <a href="pol.pdf" target="_blank">политикой обработки персональных данных.</a> </h3>
+      </div>
+
+
+
       <div class="align-center">
         <div class="col-md-12">
           <div>
-            <br><br><br><br><br>
+            <br><br>
             <input type="submit" class="basket-contact-submit" value="Отправить заказ" />
           </div>
         </div>
