--- a/info.html
+++ b/info.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Cache-Control" content="no-cache">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Контакты</title>
+  <title>Информация о продавце</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
@@ -20,9 +20,12 @@
     </div>
   </div>
 
+
+
   <header class="header-section">
     <nav class="navbar navbar-default">
       <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Меню</span>
@@ -32,8 +35,9 @@
           </button>
           <a class="navbar-brand" href="index.html"><b>Cu</b>min</a>
           <a href="basket.html"><span class="shoping-cart">Заказ</span></a>
-
         </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Магазин</a></li>
@@ -41,70 +45,26 @@
             <li><a href="production.html">Производство</a></li>
             <li><a href="blog.html">Блог</a></li>
             <li><a href="review.html">Отзывы</a></li>
-            <li class="active"><a href="contact.html">Контакты</a></li>
+            <li><a href="contact.html">Контакты</a></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right cart-menu">
-            <!--<li><a href="#"><span> Корзина &nbsp;</span> <span class="shoping-cart">0</span></a></li>-->
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
+        </div>
+      </div>
     </nav>
   </header>
 
-  <section class="contact-section">
+  <section class="news-section">
     <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="left-content">
-            <h1><span>Cu</span>min</h1>
-            <h3>Мы будем рады встретиться с вами лично или через Интернет!</h3>
-            <p></p>
-            <div class="contact-info">
-              <p><b>Телефон:</b> 8 029 310 87 89</p>
-              <p><b>Почта:</b> cuminby@mail.ru</p>
-            </div>
-            <div class="social-media">
-              <ul>
-                <!--<li><a href="#"><i class="fa fa-instagram"></i></a></li>-->
-              </ul>
-            </div>
-          </div>
+      <div class="col-sm-12">
+        <div >
+          <br><br><br>
+          <h3>Индивидуальный предприниматель <br><br> Сырокваш Виталий Фёдорович</h3>
+          <h3>УНП 690275760</h3>
+          <h3>Регистрация в торговом реестре № 452453</h3>
+          <br><br><br><br><br><br><br><br><br>
         </div>
-        <div class="col-md-6">
-          <form action="send.php" method="post" class="contact-form">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="input-group">
-                  <input type="text" class="form-control" name="name" placeholder="Ваше имя">
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="input-group">
-                  <input type="text" class="form-control" name="phone" placeholder="Ваш телефон">
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-md-12">
-                <div class="input-group">
-                  <textarea class="form-control" name="message" cols="30" rows="5" placeholder="Ваше сообщение..."></textarea>
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-md-12">
-                <div class="input-group">
-                  <input type="submit" class="contact-submit" value="Отправить" />
-                </div>
-              </div>
-            </div>
-
-          </form><br><br>
-        </div><br><br>
-      </div><br><br>
+      </div>
     </div>
+    <br><br><br><br><br><br><br><br><br>
   </section>
 
   <footer class="footer">
@@ -112,11 +72,12 @@
       <div class="row">
         <div class="col-md-12">
           <p class="center">Copyright &copy;<script>document.write(new Date().getFullYear());</script> Все права защищены | Cumin.by полезная продукция из тмина | <a href="info.html"> Информация о продавце</a></p>
-
         </div>
       </div>
     </div>
   </footer>
+
+
 
   <!-- JQUERY -->
   <script src="js/vendor/jquery-1.11.2.min.js"></script>
