--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
           <div class="service-item">
             <img src="images/m3.png" width="100" height="100" alt="Масло тмина">
             <h3>Nigela Sativa</h3>
-            <h4>По данным последних исследований только эфиопский сорт семян черного тмина Nigella Sativa имеет медицинские свойства. Благодаря использованию именно этого сорта наши продукты оказывают более сильный и быстрый эффект вашему здоровью.</h4>
+            <h4>По данным последних исследований только эфиопский сорт семян черного тмина Nigella Sativa имеет полезные свойства. Благодаря использованию именно этого сорта наши продукты становятся полезнее.</h4>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 ">
