убраны слова не подходящие яндексу

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
           <div class="blog-item">
             <a href="blog/blog2.html"><img src="images/blog2.jpg" width="350" height="262" alt="Масло тмина"></a>
             <h3>Про сертификат происхождения семян</h3>
-            <p>Существуют разные сорта тмина. Насыщенность семян черного тмина полезными микроэлементами во многом зависит от места его произрастания. Наиболее удачное сочетание климатических условий для выращивания семян тмина, обладающих медицинскими свойствами, это:</p>
+            <p>Существуют разные сорта тмина. Насыщенность семян черного тмина полезными микроэлементами во многом зависит от места его произрастания. Наиболее удачное сочетание климатических условий для выращивания семян тмина это:</p>
             <a href="blog/blog2.html">Читать далее</a>
 
           </div>
