убраны некоторые фразы по требованию яндекса

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
           </div>
           <div>
-            <h3>Масло черного тмина «Доктор Тмин» 100 мл. — отличное решение для знакомства с продуктом! Если вы давно хотели попробовать масло черного тмина от Makemi и ощутить его действие на себе — то вам идеально подойдет этот вариант. 100 мл масла хватит на прохождение полноценного месячного курса, в процессе которого вы уже сможете ощутить положительные изменения в организме и оценить его качество.</h3>
+            <h3>Масло черного тмина «Доктор Тмин» 100 мл. — отличное решение для знакомства с продуктом! Если вы давно хотели попробовать масло черного тмина от Makemi и ощутить его действие на себе — то вам идеально подойдет этот вариант. </h3>
             <div class="blog-item">
               <div>
                 <a href="product/100ml.html">Подробнее</a>
