--- a/basket.html
+++ b/basket.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Корзина</title>
-  <meta name="description" content="">
+  <meta name="description" content="Форма заказа продуктов из черного тмина. Доставка по почте по всей Беларуси. Выбрать объем и количество
+  масла тмина. Отправить заказ">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
