--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Контакты</title>
-  <meta name="description" content="">
+  <meta name="description" content="Если вы хотите задать вопрос о продукции из черного тмина, например, о употреблении масла тмина или семян
+  , свяжитесь с нами. Заполните форму контактов и мы свяжемся с вами для консультации и ответа на вопросы о черном тмине и доставке по Беларуси, Минску.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
