--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta http-equiv="Cache-Control" content="no-cache">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="description" content="">
+  <meta name="description" content="На нашем сайте Вы можете ознакомиться с продукцией из черного тмина. Это масла тмина различного объема,
+  а также семена черного тмина. Прочитать о пользе продукции из черного тмина, посмотреть рецепты и рекомендации по применению масла.
+  Мы осуществляем доставку тмина по всей Беларуси. Задать вопросы по применению и пользе черного тмина можно через наши контакты на сайте">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link rel="icon" href="images/favicon.ico">
