--- a/polza_tmina.html
+++ b/polza_tmina.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Польза продуктов из черного тмина</title>
-  <meta name="description" content="">
+  <meta name="description" content="Статья о пользе продуктов из черного тмина. Это масло черного тмина и семя. Преимущества и польза
+  употребления тмина. Происхождение растения cumin (тмин), исследования в данной области о пользе масла тмина и семян">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
