--- a/review.html
+++ b/review.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Отзывы наших покупателей</title>
-  <meta name="description" content="">
+  <meta name="description" content="Отзывы о продуктах из черного тмина. Рассказы покупателей об эффекте употребления масла тмина.
+  отзывы о семенах черного тмина и пользе для организма.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
