--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Полезные статьи о чёрном тмине</title>
-  <meta name="description" content="">
+  <meta name="description" content="На страницы блога Вы можете прочитать статьи о масле и семенах черного тмина. О том как его производят,
+  как употребляют и много другое. Польза масла черного тмина описана в наших статьях. Также имеются рекомендации при лечении различных заболеваний
+   и рецепты для приготовления и употребления черного тмина">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
