--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Информация о продавце</title>
-  <meta name="description" content="">
+  <meta name="description" content="Информация о продавце продукции из черного тмина">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
