--- a/product/100g.html
+++ b/product/100g.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Семена черного тмина 100 гр.</title>
-  <meta name="description" content="">
+  <meta name="description" content="Описание семян черного тмина, которые можно купить в красивой упаковке с доставкой по г. Минску и всей Беларуси">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="../images/favicon.ico">
   <link rel="stylesheet" href="../css/style.css">
