--- a/production.html
+++ b/production.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Производство продуктов из черного тмина</title>
-  <meta name="description" content="">
+  <meta name="description" content="Описание промышленного производства продуктов из черного тмина. О фабрике и технологии производства масла
+  тмина.В статье рассказано как правильно производить, упаковывать и хранить масло черного тмина и семена.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
