--- a/questions.html
+++ b/questions.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Часто задаваемые вопросы о продуктах из черного тмина</title>
-  <meta name="description" content="">
+  <meta name="description" content="Ответы на популярные вопросы о продуктах из черного тмина. Как правильно пить и хранить масло и семена черного
+  тмина. Способы применения и дозировка.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
