--- a/recomend.html
+++ b/recomend.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Рекомендации по лечению заболеваний</title>
-  <meta name="description" content="">
+  <meta name="description" content="Описание рекомендаций при различных заболеваниях. Рецепты и способы приема продукции из черного тмина.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
