--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
           </div>
           <div>
-            <h3>Масло черного тмина «Доктор Тмин» 250 мл. — выгодное решение для небольшой семьи из трех человек! За месячный курс вы всей семьей сможете познакомиться с продуктом, оценить его качество и почувствовать положительные влияние. Большая удобная бутылка из специального темного стекла поможет сохранить полезные свойства масла на протяжении всего курса и будет служить постоянным напоминанием о том, что масло нужно пить регулярно.</h3>
+            <h3>Масло черного тмина «Доктор Тмин» 250 мл. — выгодное решение для небольшой семьи из трех человек! За месячный курс вы всей семьей сможете познакомиться с продуктом, оценить его качество и почувствовать положительные влияние.</h3>
             <div class="blog-item">
               <div>
                 <a href="product/250ml.html">Подробнее</a>
@@ -162,7 +162,7 @@
             </div>
           </div>
           <div>
-            <h3>Масло черного тмина «Доктор тмин» 500 мл. — наиболее удобное решение для большой семьи! Если у вас несколько детей и вы всей семьей регулярно пьете масло черного тмина, то выгоднее всего брать 500 мл. Солидная большая бутылка масла «Доктор тмин», стоящая на столе не только сэкономит вам деньги, но и будет служить ежедневным напоминанием о приеме масла. Также бутылка масла «Доктор тмин» 500 мл. — отличный вариант для подарка при походе в гости к семье друзей! Красивый внешний вид бутылки и полезные свойства самого продукта лучше всяких слов скажут о ваших искренних пожеланиях добра и здоровья любимым людям.</h3>
+            <h3>Масло черного тмина «Доктор тмин» 500 мл. — наиболее удобное решение для большой семьи! Если у вас несколько детей и вы всей семьей регулярно пьете масло черного тмина, то выгоднее всего брать 500 мл. Солидная большая бутылка масла «Доктор тмин», стоящая на столе не только сэкономит вам деньги, но и будет служить ежедневным напоминанием о приеме масла.</h3>
             <div class="blog-item">
               <div>
                 <a href="product/500ml.html">Подробнее</a>
