--- a/basket.html
+++ b/basket.html
@@ -121,6 +121,12 @@
         </div>
       </div>
 
+      <div class="col-sm-12">
+        <br>
+        <h3>Обратите внимание, что услуги почты платные. На наши товары ориентировочная стоимость доставки почтой - 4р. <br> Внимательно и полностью заполните следующие поля:  <br><br><br> </h3>
+      </div>
+
+
       <div class="row">
         <div class="col-md-4">
           <div class="input-group">
