убрана анимация и лишний сертификат

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="titie-section wow fadeInDown animated ">
+          <div class="titie-section">
             <h1>Преимущества и выгоды</h1>
             <br><br><br>
           </div>
@@ -257,18 +257,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <div class="titie-section wow fadeInDown animated ">
+      <div class="titie-section">
         <h1>Вся продукция сертифицирована</h1>
+        <br><br><br>
       </div>
     </div>
-    <div class="col-sm-4">
-      <a href="images/cert1.jpg" target="_blank"><img src="images/cert1.jpg" width="300" height="400" alt="Масло тмина"></a>
-    </div>
-    <div class="col-sm-4">
-      <a href="images/cert2.jpg" target="_blank"><img src="images/cert2.jpg" width="300" height="400" alt="Масло тмина"></a>
-    </div>
-    <div class="col-sm-4">
-      <a href="images/cert3.jpg" target="_blank"><img src="images/cert2.jpg" width="300" height="400" alt="Масло тмина"></a>
+    <div class="align-center">
+      <a href="images/cert2.jpg" target="_blank"><img src="images/cert2.jpg" width="320" height="440" alt=""></a>
     </div>
   </div>
 </div>
@@ -278,7 +273,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="titie-section wow fadeInDown animated ">
+          <div class="titie-section">
             <h1>Отзывы наших покупателей</h1>
           </div>
         </div>
@@ -395,7 +390,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="titie-section wow fadeInDown animated ">
+          <div class="titie-section">
             <h1>Полезные статьи</h1>
           </div>
         </div>
@@ -433,7 +428,7 @@
   <section class="offer-section">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 wow fadeInDown animated ">
+        <div class="col-md-12">
           <h1>+375 29 310 87 89</h1>
           <h2>Позвоните и наши специалисты проконсультируют вас по вопросам покупки и употребления масла черного тмина!</h2>
         </div>
@@ -446,7 +441,7 @@
 
       <div class="row">
         <div class="col-md-12">
-          <div class="titie-section wow fadeInDown animated ">
+          <div class="titie-section">
             <h1>Доставка и схема работы</h1>
             <br><br><br>
           </div>
