--- a/index.html
+++ b/index.html
@@ -73,13 +73,116 @@
   <section class="slider-section">
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner" role="listbox">
-        <div class="item active">
+        <!-- <div class="item active">
           <img src="images/slider5.jpg" alt="Масло тмина">
           <div class="carousel-caption">
             <h2>Масло <b>&</b> семена тмина</h2>
             <h3>с доставкой по <Span>Беларуси</Span></h3>
             <a href="basket.html">Заказать доставку</a>
           </div>
+        </div> -->
+        <div>
+          <div class="item active">
+          <img src="images/slider6.jpg" alt="Масло тмина">
+          <div class="carousel-caption">
+            <h3><b>Давно ищете уникальное природное средство для здоровья всей семьи</b>?</h3>
+            <a href="polza_tmina.html">Подробнее</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="news-section">
+    <div class="container">
+      <div>
+        <div>
+          <h2><b>Масло черного тмина — это универсальное природное средство, которое применяется в следующих случаях:</b></h2>
+          <h3><b>Болезни органов пищеварения</b></h3>
+
+          <h3>Препарат способствует улучшению аппетита, активизирует перистальтику желудка и кишечника, нормализует кислотность желудочного сока, восстанавливает кишечную флору, оказывает желчегонное действие, нормализует работу в желчного пузыря и выводит токсины из пищеварительной системы. Крайне полезно для печени, так как его антиоксидантные и гепатопротекторные свойства снимают воспалительные процессы и способствуют исцелению от различных печеночных недугов, в том числе печеночной ишемии, цирроза и гепатитов. Также используется в качестве эффективного противоглистного средства.</h3>
+
+          <h3><b>Заболевания верхних и нижних дыхательных путей</b></h3>
+
+          <h3>Препарат оказывает отхаркивающее и бронхорасширяющее действие, разжижает мокроту, а потому он крайне эффективен при кашле и лечении даже таких серьезных заболеваний, как туберкулез и пневмония. Противовоспалительные, противовирусные и бактерицидные свойства масла подавляют воспалительные процессы, которые вызывают бронхит, гайморит, ОРВИ. Кроме того, масло черного тмина в помогает справиться с бронхиальной астмой и дыхательными аллергиями.</h3>
+
+          <h3><b>Слабость, усталость, апатия</b></h3>
+
+          <h3>Масло стимулирует выработку простагландина Е1, что оказывает оздоравливающий и тонизирующий эффекты. А фосфолипиды, цинк, магний и витамины группы В улучшают мозговую активность. В книге великого Авиценны «Канон врачебной науки» говорится, что чёрный тмин способствует активации энергии, тем самым помогает перебороть утомление и усталость. Действует общеукрепляюще на иммунную систему, и, что крайне важно, это антиаллерген.</h3>
+
+          <h3><b>Заболевания сердечно- сосудистой системы</b></h3>
+
+          <h3>Масло черного тмина имеет свойство расширять сосуды, выводить лишнюю жидкость и понижать кровяное давление. Оно повышает эластичность стенок сосудов, устраняет их ломкость, снижает уровень холестерина и предотвращает появление атеросклероза, препятствует возникновению воспалительных заболеваний сердца и сосудов. В качестве профилактики масло рекомендуется к регулярному применению людям преклонного возраста.</h3>
+
+          <h3><b>Другие заболевания</b></h3>
+
+          <h3>Более 200 университетских исследований, проведённых с 1959 года, свидетельствуют о чрезвычайной эффективности традиционного использования черного тмина. Полный список болезней, при которых полезно употребление масла черного тмина вы можете посмотреть в разделе <a href="polza_tmina.html">Польза тмина.</a></h3>
+
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <section class="contact-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="titie-section wow fadeInDown animated ">
+            <h1>Получите бесплатную консультацию!</h1>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="left-content">
+            <h3><span class="fa fa-check">&nbsp;&nbsp;</span>Расскажем о применении черного тмина</h3>
+            <h3><span class="fa fa-check">&nbsp;&nbsp;</span>Определим индивидуальный курс лечения</h3>
+            <h3><span class="fa fa-check">&nbsp;&nbsp;</span>Проконсультируем по конкретному вопросу</h3>
+            <br><br>
+
+            <div class="social-media">
+              <ul>
+                <li><a href="https://www.instagram.com/makemi.ru/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://ok.ru/group/53870098448477/" target="_blank"><i class="fa fa-odnoklassniki"></i></a></li>
+                <li><a href="https://vk.com/makemi_ru" target="_blank"><i class="fa fa-vk"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <form action="send.php" method="post" class="contact-form">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="input-group">
+                  <input type="text" class="form-control" name="name" placeholder="Ваше имя">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="input-group">
+                  <input type="text" class="form-control" name="phone" placeholder="Ваш телефон">
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-12">
+                <div class="input-group">
+                  <textarea class="form-control" name="message" cols="30" rows="5" placeholder="Ваше сообщение..."></textarea>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <div class="input-group">
+                  <input type="submit" class="contact-submit" value="Отправить" />
+                </div>
+                <h4 style="color:rgb(255, 255, 255)">Согласие на <a href="pol.pdf" target="_blank">обработку персональных данных.</a><br> Не является лекарственным средством. Имеются противопоказания. Перед применением проконсультируйтесь со специалистом.</h4>
+
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
