--- a/index.html
+++ b/index.html
@@ -73,24 +73,15 @@
   <section class="slider-section">
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner" role="listbox">
-        <!-- <div class="item active">
-          <img src="images/slider5.jpg" alt="Масло тмина">
-          <div class="carousel-caption">
-            <h2>Масло <b>&</b> семена тмина</h2>
-            <h3>с доставкой по <Span>Беларуси</Span></h3>
-            <a href="basket.html">Заказать доставку</a>
-          </div>
-        </div> -->
         <div>
           <div class="item active">
           <img src="images/slider6.jpg" alt="Масло тмина">
           <div class="carousel-caption">
-            <h3><b>Давно ищете уникальное природное средство для здоровья всей семьи</b>?</h3>
+            <h3><b>Давно ищете уникальное природное средство для здоровья всей семьи ?</b></h3>
             <a href="polza_tmina.html">Подробнее</a>
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
@@ -188,6 +179,8 @@
     </div>
   </section>
 
+
+
   <section class="new-section">
     <div class="container">
       <div class="row">
@@ -272,11 +265,31 @@
               </div>
             </div>
             <div class="blog-item">
-
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
 
+  <section class="offer-section">
+    <div class="container">
+      <div class="col-md-12">
+        <div class="titie-section">
+          <h1>Акция!</h1>
+        </div>
+      </div>
+      <div class="col-sm-12" style="text-align: center">
+        <div>
+          <div>
+            <h2>При покупке 250 мл. масла «Доктор Тмин» — баночка семян в подарок!<br><br> </h2>
+          </div>
+        </div>
+        <div class="blog-item">
+          <div>
+            <a href="basket.html">Заказать</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -531,7 +544,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1>+375 29 310 87 89</h1>
+          <h1>8 029 310 87 89</h1>
           <h2>Позвоните и наши специалисты проконсультируют вас по вопросам покупки и употребления масла черного тмина!</h2>
         </div>
       </div>
