--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     <div class="container">
       <div class="col-md-12">
         <div class="titie-section">
-          <h1>Акция!</h1>
+          <h1>Акция до 15.08.2019</h1>
         </div>
       </div>
       <div class="col-sm-12" style="text-align: center">
@@ -293,6 +293,42 @@
       </div>
     </div>
   </section>
+
+  <section class="new-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="titie-section">
+            <br><br><br>
+            <h1>Акция до 10.08.2019</h1>
+            <br><br>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+
+
+        <div class="col-md-4">
+          <div class="product-item">
+            <a href="product/100ml.html"><img src="images/1a.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="product-item">
+            <a href="product/250ml.html"><img src="images/2a.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="product-item">
+            <a href="product/500ml.html"><img src="images/3a.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
 
