--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <img src="images/slider6.jpg" alt="Масло тмина">
           <div class="carousel-caption">
             <h3><b>Давно ищете уникальное природное средство для здоровья всей семьи ?</b></h3>
-            <a href="polza_tmina.html">Подробнее</a>
+            <!-- <a href="polza_tmina.html">Подробнее</a> -->
           </div>
         </div>
       </div>
