редирект index, правки seo

--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
           <div class="product-item">
             <a href="product/250ml.html"><img src="images/2.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
-              <a href="product-title"><h3>Масло черного тмина 250 мл.</h3></a>
-              <a href="product-title"><span>46р</span></a>
+              <a href="product/250ml.html"><h3>Масло черного тмина 250 мл.</h3></a>
+              <a href="product/250ml.html"><span>46р</span></a>
             </div>
           </div>
           <div>
