изменено название страниц блога

--- a/recomend.html
+++ b/recomend.html
@@ -38,7 +38,7 @@
             <li><a href="index.html">Магазин</a></li>
             <li><a href="polza_tmina.html">Польза тмина</a></li>
             <li><a href="production.html">Производство</a></li>
-            <li><a href="blog.html">Блог</a></li>
+            <li><a href="blogs.html">Блог</a></li>
             <li><a href="review.html">Отзывы</a></li>
             <li><a href="contact.html">Контакты</a></li>
           </ul>
