--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
   </section>
 
 
-  <section class="new-section">
+  <!-- <section class="new-section">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -306,7 +306,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
 
