обязательные поля в заказе

--- a/basket.html
+++ b/basket.html
@@ -94,7 +94,7 @@
           <img src="images/mini1.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
         </div>
         <div class="col-sm-4">
-          <h3><b>Масло черного тмина 100 мл. ( <s>19р</s> 16р )</b></h3>
+          <h3><b>Масло черного тмина 100 мл. (19р)</b></h3>
         </div>
         <div class="col-sm-4">
           <div class="input-group">
@@ -110,7 +110,7 @@
           <img src="images/mini2.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
         </div>
         <div class="col-sm-4">
-          <h3><b>Масло черного тмина 250 мл. (<s>46р</s> 39р)</b></h3>
+          <h3><b>Масло черного тмина 250 мл. (46р)</b></h3>
         </div>
         <div class="col-sm-4">
           <div class="input-group">
@@ -126,7 +126,7 @@
           <img src="images/mini3.jpg" class="img-responsive" width="100" height="100" alt="Масло тмина">
         </div>
         <div class="col-sm-4">
-          <h3><b>Масло черного тмина 500 мл. (<s>86р</s> 78р)</b></h3>
+          <h3><b>Масло черного тмина 500 мл. (86р)</b></h3>
         </div>
         <div class="col-sm-4">
           <div class="input-group">
@@ -147,40 +147,19 @@
         <div class="col-md-4">
           <div class="input-group">
             <br><br>
-            <input type="text" class="form-control" name="index" placeholder="Индекс">
+            <input type="text" class="form-control" name="index" placeholder="Индекс" required>
           </div>
         </div>
         <div class="col-md-4">
           <div class="input-group">
             <br><br>
-            <input type="text" class="form-control" name="oblast" placeholder="Область">
+            <input type="text" class="form-control" name="oblast" placeholder="Область" required>
           </div>
         </div>
         <div class="col-md-4">
           <div class="input-group">
             <br><br>
-            <input type="text" class="form-control" name="city" placeholder="Город">
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="street" placeholder="Улица">
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="d" placeholder="Дом">
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="input-group">
-            <br><br>
-            <input type="text" class="form-control" name="kv" placeholder="Квартира">
+            <input type="text" class="form-control" name="city" placeholder="Город" required>
           </div>
         </div>
       </div>
@@ -189,19 +168,40 @@
         <div class="col-md-4">
           <div class="input-group">
             <br><br>
-            <input type="text" class="form-control" name="phone" placeholder="Телефон">
+            <input type="text" class="form-control" name="street" placeholder="Улица" required>
           </div>
         </div>
         <div class="col-md-4">
           <div class="input-group">
             <br><br>
-            <input type="text" class="form-control" name="name1" placeholder="Фамилия">
+            <input type="text" class="form-control" name="d" placeholder="Дом" required>
           </div>
         </div>
         <div class="col-md-4">
           <div class="input-group">
             <br><br>
-            <input type="text" class="form-control" name="name2" placeholder="Имя, отчество">
+            <input type="text" class="form-control" name="kv" placeholder="Квартира" required>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-4">
+          <div class="input-group">
+            <br><br>
+            <input type="text" class="form-control" name="phone" placeholder="Телефон" required>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="input-group">
+            <br><br>
+            <input type="text" class="form-control" name="name1" placeholder="Фамилия" required>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="input-group">
+            <br><br>
+            <input type="text" class="form-control" name="name2" placeholder="Имя, отчество" required>
           </div>
         </div>
       </div>
