--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
   </section>
 
 
-  <!-- <section class="new-section">
+  <section class="new-section">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="titie-section">
             <br><br><br>
-            <h1>Акция до 10.08.2019</h1>
+            <h1>Акция до 31.08.2019</h1>
             <br><br>
           </div>
         </div>
@@ -306,7 +306,7 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
 
 
