правки для увеличения конверсии

--- a/product/100ml.html
+++ b/product/100ml.html
@@ -36,7 +36,7 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="../index.html">Магазин</a></li>
+            <li><a href="../basket.html">Заказ</a></li>
             <li><a href="../polza_tmina.html">Польза тмина</a></li>
             <li><a href="../production.html">Производство</a></li>
             <li><a href="../blogs.html">Блог</a></li>
@@ -68,6 +68,13 @@
               <h3><li>Собственное производство.</li></h3>
             </ul>
             <h3>Товар сертифицирован, соответствует техническому регламенту на масложировую продукцию.</h3>
+            <br>
+            <div class="blog-item">
+              <div>
+                <a href="../basket.html">Купить масло "Доктор Тмин"</a>
+              </div>
+              <br><br><br>
+            </div>
         </div>
       </div>
     </section>
