--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Магазин</a></li>
+            <li><a href="basket.html">Заказ</a></li>
             <li><a href="polza_tmina.html">Польза тмина</a></li>
             <li><a href="production.html">Производство</a></li>
             <li><a href="blogs.html">Блог</a></li>
