--- a/index.html
+++ b/index.html
@@ -54,17 +54,19 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html"><b>Cu</b>min</a>
-          <a href="basket.html"><span class="shoping-cart">Заказ</span></a>
+          <!-- <a href="basket.html"><span class="shoping-cart">Заказ</span></a> -->
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
           <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Магазин</a></li>
+            <li class="active"><a href="basket.html">Заказ</a></li>
             <li><a href="polza_tmina.html">Польза тмина</a></li>
             <li><a href="production.html">Производство</a></li>
             <li><a href="blogs.html">Блог</a></li>
             <li><a href="review.html">Отзывы</a></li>
             <li><a href="contact.html">Контакты</a></li>
+
           </ul>
         </div>
       </div>
@@ -177,138 +179,6 @@
       </div>
     </div>
   </section>
-
-
-
-  <section class="new-section">
-    <div class="container">
-      <div class="row">
-
-        <div class="col-md-12">
-          <div class="titie-section">
-            <br>
-            <h1>Магазин</h1>
-            <br><br>
-            <h3>Продукты черного тмина — важная часть здорового питания. Если вы давно хотели попробовать масло черного тмина и ощутить его действие на себе — то масло «Доктор Тмин» от Makemi станет для вас идеальным вариантом!</h3>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-
-        <div class="col-md-3">
-          <div class="product-item">
-            <a href="product/100g.html"><img src="images/4.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
-            <div class="product-title">
-              <a href="product/100g.html"><h3>Семена черного тмина 100 гр.</h3></a>
-              <a href="product/100g.html"><span>5р</span></a>
-            </div>
-          </div>
-          <div>
-            <h3>Применение семян растения очень разнообразно. Из них можно делать настои и отвары, измельчать до порошкообразного состояния, а затем смешивать с другими ингредиентами. Также их можно жевать целиком или использовать в качестве наружного средства.</h3>
-            <div class="blog-item">
-              <div>
-                <a href="product/100g.html">Подробнее</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="product-item">
-            <a href="product/100ml.html"><img src="images/1.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
-            <div class="product-title">
-              <a href="product/100ml.html"><h3>Масло черного тмина 100 мл.</h3></a>
-              <a href="product/100ml.html"><span>19р</span></a>
-            </div>
-          </div>
-          <div>
-            <h3>Масло черного тмина «Доктор Тмин» 100 мл. — отличное решение для знакомства с продуктом! Если вы давно хотели попробовать масло черного тмина от Makemi и ощутить его действие на себе — то вам идеально подойдет этот вариант. </h3>
-            <div class="blog-item">
-              <div>
-                <a href="product/100ml.html">Подробнее</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="product-item">
-            <a href="product/250ml.html"><img src="images/2.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
-            <div class="product-title">
-              <a href="product/250ml.html"><h3>Масло черного тмина 250 мл.</h3></a>
-              <a href="product/250ml.html"><span>46р</span></a>
-            </div>
-          </div>
-          <div>
-            <h3>Масло черного тмина «Доктор Тмин» 250 мл. — выгодное решение для небольшой семьи из трех человек! За месячный курс вы всей семьей сможете познакомиться с продуктом, оценить его качество и почувствовать положительные влияние.</h3>
-            <div class="blog-item">
-              <div>
-                <a href="product/250ml.html">Подробнее</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-3">
-          <div class="product-item">
-            <a href="product/500ml.html"><img src="images/3.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
-            <div class="product-title">
-              <a href="product/500ml.html"><h3>Масло черного тмина 500 мл.</h3></a>
-              <a href="product/500ml.html"><span>86р</span></a>
-            </div>
-          </div>
-          <div>
-            <h3>Масло черного тмина «Доктор тмин» 500 мл. — наиболее удобное решение для большой семьи! Если у вас несколько детей и вы всей семьей регулярно пьете масло черного тмина, то выгоднее всего брать 500 мл. Солидная большая бутылка масла «Доктор тмин», стоящая на столе не только сэкономит вам деньги, но и будет служить ежедневным напоминанием о приеме масла.</h3>
-            <div class="blog-item">
-              <div>
-                <a href="product/500ml.html">Подробнее</a>
-              </div>
-            </div>
-            <div class="blog-item">
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
-  <section class="new-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="titie-section">
-            <br><br><br>
-            <h1>Акция до 31.08.2019</h1>
-            <br><br>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-
-
-        <div class="col-md-4">
-          <div class="product-item">
-            <a href="product/100ml.html"><img src="images/1a.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="product-item">
-            <a href="product/250ml.html"><img src="images/2a.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="product-item">
-            <a href="product/500ml.html"><img src="images/3a.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-
 
 
   <section class="service-section">
@@ -478,37 +348,69 @@
             <h1>Рекомендации к применению</h1>
             <br>
             <div class="align-center">
-              <h3><a href="blog/blog4.html">Инфекционные заболевания</a></h3>
-              <h3><a href="blog/blog5.html">Заболевания опорно-двигательной системы</a></h3>
-              <h3><a href="blog/blog6.html">Онкологические заболевания</a></h3>
-              <h3><a href="blog/blog7.html">Кожные заболевания</a></h3>
-              <h3><a href="blog/blog8.html">Заболевания желез внутренних секреций</a></h3>
-              <h3><a href="blog/blog9.html">Мочеполовой системы</a></h3>
-              <h3><a href="blog/blog10.html">Нарушение обмена веществ</a></h3>
-              <h3><a href="blog/blog11.html">Женских заболевания</a></h3>
-              <h3><a href="blog/blog12.html">Мужских заболевания</a></h3>
-              <h3><a href="blog/blog13.html">Желудочно-кишечной системы</a></h3>
-              <h3><a href="blog/blog14.html">Дыхательной системы</a></h3>
-              <h3><a href="blog/blog15.html">Сердечно-сосудистой системы</a></h3>
-              <h3><a href="blog/blog16.html">Нервной системы</a></h3>
-              <h3><a href="blog/blog17.html">ЛОР заболеваниях</a></h3>
+              <div class="row">
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog4.html">Инфекционные заболевания</a></h3>
+                </div>
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog7.html">Кожные заболевания</a></h3>
+                </div>
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog6.html">Онкологические заболевания</a></h3>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog7.html">Кожные заболевания</a></h3>
+                </div>
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog17.html">ЛОР заболеваниях</a></h3>
+                </div>
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog9.html">Мочеполовой системы</a></h3>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog10.html">Нарушение обмена веществ</a></h3>
+                </div>
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog11.html">Женских заболевания</a></h3>
+                </div>
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog12.html">Мужских заболевания</a></h3>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog13.html">Желудочно-кишечной системы</a></h3>
+                </div>
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog14.html">Дыхательной системы</a></h3>
+                </div>
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog15.html">Сердечно-сосудистой системы</a></h3>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog16.html">Нервной системы</a></h3>
+                </div>
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog8.html">Заболевания желез внутренних секреций</a></h3>
+                </div>
+                <div class="col-sm-4">
+                  <h3><a href="blog/blog5.html">Заболевания опорно-двигательной системы</a></h3>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="titie-section">
-            <h1>Книга рецептов</h1>
-            <br>
-            <div class="align-center">
-              <h3><a href="kniga.pdf" target="_blank">Книга рецептов масла черного тмина «Доктор Тмин».pdf</a></h3>
-            </div>
-          </div>
-        </div>
-      </div>
-
     </div>
   </section>
 
@@ -575,48 +477,151 @@
             <br><br><br>
           </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-md-12 col-sm-12 ">
+        <div class="col-md-2 ">
           <div class="service-item">
             <img src="images/sh-1.png" width="100" height="100" alt="Масло тмина">
             <h3>Заказ товара на сайте</h3>
           </div>
         </div>
 
-        <div class="col-md-12 col-sm-12> ">
+        <div class="col-md-2">
           <div class="service-item">
             <img src="images/sh-2.png" width="100" height="100" alt="Масло тмина">
             <h3>Подтверждение заказа</h3>
           </div>
         </div>
 
-        <div class="col-md-12 col-sm-12 ">
+        <div class="col-md-2">
           <div class="service-item">
             <img src="images/sh-3.png" width="100" height="100" alt="Масло тмина">
             <h3>Выбор способа доставки</h3>
           </div>
         </div>
 
-        <div class="col-md-12 col-sm-12 ">
+        <div class="col-md-2">
           <div class="service-item">
             <img src="images/sh-5.png" width="100" height="100" alt="Масло тмина">
             <h3>Отправка заказа со склада</h3>
           </div>
         </div>
 
-        <div class="col-md-12 col-sm-12 ">
+        <div class="col-md-2">
           <div class="service-item">
             <img src="images/m6.png" width="100" height="100" alt="Масло тмина">
-            <h3>Получение заказа и оплата</h3>
+            <h3>Получение заказа</h3>
+          </div>
+        </div>
+
+        <div class="col-md-2">
+          <div class="service-item">
+            <img src="images/sh-4.png" width="100" height="100" alt="Масло тмина">
+            <h3>Оплата</h3>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+
+  <section class="new-section">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-md-12">
+          <div class="titie-section">
+            <br>
+            <h1>Магазин</h1>
+            <br><br>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+
+        <div class="col-md-3">
+          <div class="product-item">
+            <a href="product/100g.html"><img src="images/4.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
+            <div class="product-title">
+              <a href="product/100g.html"><h3>Семена черного тмина 100 гр.</h3></a>
+              <a href="product/100g.html"><span>5р</span></a>
+            </div>
+          </div>
+          <div>
+            <h3>Применение семян растения очень разнообразно. Из них можно делать настои и отвары, измельчать до порошкообразного состояния, а затем смешивать с другими ингредиентами. Также их можно жевать целиком или использовать в качестве наружного средства.</h3>
+            <div class="blog-item">
+              <div>
+                <a href="product/100g.html">Подробнее</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="product-item">
+            <a href="product/100ml.html"><img src="images/1.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
+            <div class="product-title">
+              <a href="product/100ml.html"><h3>Масло черного тмина 100 мл.</h3></a>
+              <a href="product/100ml.html"><span>19р</span></a>
+            </div>
+          </div>
+          <div>
+            <h3>Масло черного тмина «Доктор Тмин» 100 мл. — отличное решение для знакомства с продуктом! Если вы давно хотели попробовать масло черного тмина от Makemi и ощутить его действие на себе — то вам идеально подойдет этот вариант. </h3>
+            <div class="blog-item">
+              <div>
+                <a href="product/100ml.html">Подробнее</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="product-item">
+            <a href="product/250ml.html"><img src="images/2.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
+            <div class="product-title">
+              <a href="product/250ml.html"><h3>Масло черного тмина 250 мл.</h3></a>
+              <a href="product/250ml.html"><span>46р</span></a>
+            </div>
+          </div>
+          <div>
+            <h3>Масло черного тмина «Доктор Тмин» 250 мл. — выгодное решение для небольшой семьи из трех человек! За месячный курс вы всей семьей сможете познакомиться с продуктом, оценить его качество и почувствовать положительные влияние.</h3>
+            <div class="blog-item">
+              <div>
+                <a href="product/250ml.html">Подробнее</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="product-item">
+            <a href="product/500ml.html"><img src="images/3.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
+            <div class="product-title">
+              <a href="product/500ml.html"><h3>Масло черного тмина 500 мл.</h3></a>
+              <a href="product/500ml.html"><span>86р</span></a>
+            </div>
+          </div>
+          <div>
+            <h3>Масло черного тмина «Доктор тмин» 500 мл. — наиболее удобное решение для большой семьи! Если у вас несколько детей и вы всей семьей регулярно пьете масло черного тмина, то выгоднее всего брать 500 мл. Солидная большая бутылка масла «Доктор тмин», стоящая на столе не только сэкономит вам деньги, но и будет служить ежедневным напоминанием о приеме масла.</h3>
+            <div class="blog-item">
+              <div>
+                <a href="product/500ml.html">Подробнее</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-
+  <div class="container">
+  <div class="blog-item">
+    <div class="align-center">
+      <a href="basket.html"> Перейте к оформлению заказа </a>
+    </div>
+    <br><br><br><br><br>
+  </div>
+  </div>
 
 
   <section class="contact-section">
