--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
   <div class="container">
   <div class="blog-item">
     <div class="align-center">
-      <a href="basket.html"> Перейте к оформлению заказа </a>
+      <a href="basket.html"> Перейти к оформлению заказа </a>
     </div>
     <br><br><br><br><br>
   </div>
