--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
   </section>
 
 
-  <section class="news-section">
+  <!-- <section class="news-section">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -340,9 +340,9 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-sm-12">
           <div class="titie-section">
             <h1>Рекомендации к применению</h1>
@@ -412,7 +412,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
 
@@ -614,14 +614,28 @@
     </div>
   </section>
 
+
+  <section class="offer-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Приятный бонус!</h1>
+          <h2>При покупке масла объёмом 250мл и более, семена в подарок!</h2>
+        </div>
+      </div>
+    </div><br><br>
+  </section>
+
   <div class="container">
   <div class="blog-item">
     <div class="align-center">
+      <br><br><br><br><br>
       <a href="basket.html"> Перейти к оформлению заказа </a>
     </div>
     <br><br><br><br><br>
   </div>
   </div>
+
 
 
   <section class="contact-section">
