--- a/index.html
+++ b/index.html
@@ -90,23 +90,35 @@
   <section class="news-section">
     <div class="container">
       <div>
-        <div>
+        <div class="align-center">
           <h2><b>Масло черного тмина — это универсальное природное средство, которое применяется в следующих случаях:</b></h2>
           <h3><b>Болезни органов пищеварения</b></h3>
 
           <h3>Препарат способствует улучшению аппетита, активизирует перистальтику желудка и кишечника, нормализует кислотность желудочного сока, восстанавливает кишечную флору, оказывает желчегонное действие, нормализует работу в желчного пузыря и выводит токсины из пищеварительной системы. Крайне полезно для печени, так как его антиоксидантные и гепатопротекторные свойства снимают воспалительные процессы и способствуют исцелению от различных печеночных недугов, в том числе печеночной ишемии, цирроза и гепатитов. Также используется в качестве эффективного противоглистного средства.</h3>
+          <br><br>
+          <img src="images/main.jpg" width="250" height="200" alt="Масло тмина">
+          <br><br>
 
           <h3><b>Заболевания верхних и нижних дыхательных путей</b></h3>
 
           <h3>Препарат оказывает отхаркивающее и бронхорасширяющее действие, разжижает мокроту, а потому он крайне эффективен при кашле и лечении даже таких серьезных заболеваний, как туберкулез и пневмония. Противовоспалительные, противовирусные и бактерицидные свойства масла подавляют воспалительные процессы, которые вызывают бронхит, гайморит, ОРВИ. Кроме того, масло черного тмина в помогает справиться с бронхиальной астмой и дыхательными аллергиями.</h3>
 
+          <br><br>
+          <img src="images/main2.jpg" width="250" height="200" alt="Масло тмина">
+          <br><br>
           <h3><b>Слабость, усталость, апатия</b></h3>
 
           <h3>Масло стимулирует выработку простагландина Е1, что оказывает оздоравливающий и тонизирующий эффекты. А фосфолипиды, цинк, магний и витамины группы В улучшают мозговую активность. В книге великого Авиценны «Канон врачебной науки» говорится, что чёрный тмин способствует активации энергии, тем самым помогает перебороть утомление и усталость. Действует общеукрепляюще на иммунную систему, и, что крайне важно, это антиаллерген.</h3>
+          <br><br>
+          <img src="images/main3.jpg" width="250" height="200" alt="Масло тмина">
+          <br><br>
 
           <h3><b>Заболевания сердечно- сосудистой системы</b></h3>
 
           <h3>Масло черного тмина имеет свойство расширять сосуды, выводить лишнюю жидкость и понижать кровяное давление. Оно повышает эластичность стенок сосудов, устраняет их ломкость, снижает уровень холестерина и предотвращает появление атеросклероза, препятствует возникновению воспалительных заболеваний сердца и сосудов. В качестве профилактики масло рекомендуется к регулярному применению людям преклонного возраста.</h3>
+          <br><br>
+          <img src="images/main5.jpg" width="250" height="200" alt="Масло тмина">
+          <br><br>
 
           <h3><b>Другие заболевания</b></h3>
 
@@ -118,7 +130,7 @@
 
   </section>
 
-  <section class="contact-section">
+  <!-- <section class="contact-section">
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
@@ -178,7 +190,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
   <section class="service-section">
@@ -279,7 +291,7 @@
         </div>
       </div>
       <div class="col-sm-12">
-        <div >
+        <!-- <div >
           <div>
             <div class="row" >
               <div class="col-sm-4 ">
@@ -299,7 +311,7 @@
               </div>
             </div><br><br>
           </div>
-        </div>
+        </div> -->
         <div>
           <div>
             <h2>Светлана</h2>
