--- a/basket.html
+++ b/basket.html
@@ -71,6 +71,7 @@
       <h3>Для уточнение цены и способах доставки оставьте номер телефона. Мы свяжемся с вами и проконсультируем.</h3>
     </div>
 
+    <form action="send_basket.php" method="post" class="basket-form">
       <div class="row">
         <div class="col-md-4">
           <div class="input-group">
