--- a/basket.html
+++ b/basket.html
@@ -73,7 +73,7 @@
     <form action="send_basket.php" method="post" class="basket-form">
 
       <div class="row">
-        <!-- <div class="col-md-4">
+        <div class="col-md-4">
           <div class="input-group">
             <br><br>
             <input type="text" class="form-control" name="phone" placeholder="Телефон" required>
@@ -84,7 +84,7 @@
             <br><br>
             <input type="text" class="form-control" name="name" placeholder="Имя" required>
           </div>
-        </div> -->
+        </div>
         <div class="col-md-4">
           <div class="input-group">
             <br><br>
@@ -109,7 +109,9 @@
 
 
     </form>
-    <br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  </div>
+  </div>
   </div>
 
 
