--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
 <body>
   <!-- PRELOADER -->
-  <div id="preloader">
+  <!-- <div id="preloader">
     <div class="preloader-area">
       <div class="preloader-box">
         <div class="preloader"></div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <header class="header-section">
     <nav class="navbar navbar-default">
