--- a/basket--.html
+++ b/basket--.html
@@ -234,6 +234,10 @@
       <div class="row">
         <div class="col-md-12">
           <p class="center">Copyright &copy;<script>document.write(new Date().getFullYear());</script> Все права защищены | Cumin.by полезная продукция из тмина | <a href="info.html"> Информация о продавце</a></p>
+<div >
+  <a style="color: #179858" href="https://k12.by">Маникюр, депиляция, брови, ресницы, уход за лицом</a>
+</div>
+
 
         </div>
       </div>
