--- a/basket.html
+++ b/basket.html
@@ -67,7 +67,10 @@
   <div class="container">
 
     <div class="col-sm-12">
-      <h3>Для уточнение цены и способах доставки оставьте номер телефона. <br>Мы свяжемся с вами и проконсультируем. <br>Либо позвоните нам <br>8 029 127 92 71</h3>
+      <!-- <h3>Для уточнение цены и способах доставки оставьте номер телефона. <br>Мы свяжемся с вами и проконсультируем. <br>Либо позвоните нам <br>8 029 127 92 71</h3> -->
+      <h3>Чтобы получить бесплатную консультацию по применению <br> и уточнить условия доставки, оставьте ваш номер телефона.
+         <br> Или позвоните нам 8 (029) 127-92-71 <br>Доставка почтой по Беларуси.</h3>
+
     </div>
 
     <form action="send_basket.php" method="post" class="basket-form">
