--- a/contact.html
+++ b/contact.html
@@ -103,10 +103,12 @@
             </div>
 
           </form><br><br>
-        </div><br><br>
-      </div><br><br>
+        </div>
+      </div>
     </div>
   </section>
+
+
 
   <footer class="footer">
     <div class="container">
