--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
             <a href="product/100g.html"><img src="images/4.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
               <a href="product/100g.html"><h3>Семена черного тмина 100 гр.</h3></a>
-              <!-- <a href="product/100g.html"><span>5р</span></a> -->
+              <a href="product/100g.html"><span>5р</span></a>
             </div>
           </div>
           <div>
@@ -574,7 +574,7 @@
             <a href="product/100ml.html"><img src="images/1.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
               <a href="product/100ml.html"><h3>Масло черного тмина 100 мл.</h3></a>
-              <!-- <a href="product/100ml.html"><span>19р</span></a> -->
+              <a href="product/100ml.html"><span>19р</span></a>
             </div>
           </div>
           <div>
@@ -592,7 +592,7 @@
             <a href="product/250ml.html"><img src="images/2.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
               <a href="product/250ml.html"><h3>Масло черного тмина 250 мл.</h3></a>
-              <!-- <a href="product/250ml.html"><span>46р</span></a> -->
+              <a href="product/250ml.html"><span>46р</span></a>
             </div>
           </div>
           <div>
@@ -610,7 +610,7 @@
             <a href="product/500ml.html"><img src="images/3.png" class="img-responsive" width="255" height="322" alt="Масло тмина"></a>
             <div class="product-title">
               <a href="product/500ml.html"><h3>Масло черного тмина 500 мл.</h3></a>
-              <!-- <a href="product/500ml.html"><span>86р</span></a> -->
+              <a href="product/500ml.html"><span>86р</span></a>
             </div>
           </div>
           <div>
