--- a/review.html
+++ b/review.html
@@ -58,7 +58,7 @@
 
   <section class="news-section">
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="row" >
         <div class="col-sm-4 ">
           <div class="blog-item">
@@ -96,7 +96,7 @@
           </div>
         </div>
       </div><br><br>
-    </div><br><br>
+    </div><br><br> -->
 
     <div class="container">
       <div class="col-sm-12">
@@ -127,6 +127,7 @@
       </div>
     </div>
   </section>
+  <br><br><br><br>
 
 
 
